# Semantic-File-Crawler

./: .env.example  .gitignore  FIle Parsing.pseudo  FIle Tree Parsing Ideas.ipynb  ParseFileSystem.pseudo  Presentation_Draft.MD  README.md  pyproject.toml
metacrawler/: clean_up_file_system.py  extract_hashtags.py  file_system_graph.py  fix_dir_rel.py  get_mime_type.py  hashtag_agent.py  langchain_query.py  langchain_test.py  main.py  meta_analyse.py  summarise_agent.py  walk_file_system.py  wipe_database.py
src/: azure_doc_converter.py  embed.py  hashtag_agent.py  meta_analyse.py  mock_filesystem.py  privacy_agent.py  summarise_agent.py  wipe_database.py
tests/Test_Drive/Folder One/: DRAFT CONTRACT.docx  Project Plan.docx
tests/Test_Drive/Folder Two/: minutes
